# cpp

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cpp.code-workspace  main.cpp
.agent/rules/: CMakePresets.example.json  config.md  impl.md  spec.md  test.md
.agent/workflows/: start-develop-one-task.md
docs/artifacts/: implementation_plan__cpp23.md  linux_build_setup.md  project_blueprint.md
docs/cpp_evolution/: README.md  chrono_format.md  error_expected.md
docs/learning/: const_return_type_guide.md  cpp_evolution.md  modern_ring_buffer_architecture.md
docs/specs/: 00_template.md  01_project_restructure.md  03_ring_buffer_modernize.md  04_timestamp_modernize.md  05_memory_dump_refactor.md  06_dlog_modernize.md  07_game_engine_adapters.md  08_001_dedicated_console.md  08_002_benchmark.md  08_pattern_visualizer.md  09_001_dump_format.md  09_error_expected.md  10_logger_facade.md
docs/tasks/: agent_todo.md
docs/tasks/feature_01_project_restructure/: plan.md  testrecord.md  walkthrough.md
docs/tasks/feature_dedicated-console/: plan.md  testrecord.md  walkthrough.md
docs/tasks/feature_error-expected/: plan.md  testrecord.md  walkthrough.md
docs/tasks/feature_error-expected/test_reports/: dump_handle_report.md  prepare_dump_handle_report.md
docs/tasks/feature_error-expected/usage/: symb-dump-relwithdebinfo.md  symbolize_dump_cross_platform.md  win-symb-dump-relwithdebinfo.md
docs/tasks/feature_logger-facade/: plan.md  testrecord.md  walkthrough.md
docs/tasks/feature_pattern-visualizer/: plan.md  testrecord.md  walkthrough.md
docs/tasks/feature_ring-buffer-modernize/: plan.md  testrecord.md  walkthrough.md
docs/tasks/feature_timestamp-modernize/: plan.md  testrecord.md  walkthrough.md
include/atugcc/core/: adefine.hpp  alog.h  atime.hpp  error.hpp  log_queue.hpp  logger.hpp  memory_dump.hpp  ring_buffer.h  ring_buffer.hpp  timestamp.hpp
include/atugcc/libs/: sound.h
include/atugcc/pattern/: command.hpp  decorator.hpp  factory.hpp  injection.hpp  iterator_concept.hpp  observer.hpp  state.hpp  visualizer.hpp
include/atugcc/pattern/detail/: d2_formatter.hpp  mermaid_formatter.hpp  plantuml_formatter.hpp  terminal_formatter.hpp
includes/libsample/: shape.h
libs/: CMakeLists.txt
libs/libsample/: shape.cpp  sound.cpp
modules/: adefine.hpp  alog.cppm  alog.h  atime.hpp  memory_dump.cpp  memory_dump.h  memory_dump.hpp  ring_buffer.cpp  ring_buffer.h  sample_module.cppm
modules/log/: alog.h  atime.hpp  memory_dump.hpp  ring_buffer.h
sample/: barrier.hpp  cond_var.hpp  double_dispatch.hpp  sql_postgre.hpp
sample/design_pattern/: decorator.hpp  observer.hpp  state.hpp
sample/general_structure/: hardware_interfacing_system.hpp  recipe_mgr.hpp
scripts/: parse_dump.py
src/: cond_var.hpp
src/core/: alog.cppm  log_queue.cpp  logger.cpp  ring_buffer.cpp  timestamp.cpp
src/libs/: shape.cpp  sound.cpp
src/pattern/: example_visualizer.cpp
tests/: CMakeLists.txt  test_double_dispatch.cpp
tests/core/: test_dump_handle.cpp  test_error_expected.cpp  test_logger.cpp  test_posix_dump.cpp  test_ring_buffer.cpp  test_timestamp.cpp
tests/pattern/: test_visualizer.cpp
tools/: symbolize_dump.cpp  symbolize_dump.py
